# Efficient-Apriori

./: .readthedocs.yml  .travis.yml  DEPLOY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
apriori/: itemsets.py
apriori/tests/: test_itemsets.py
docs/: Makefile  make.bat
docs/presentation/: apriori.tex
docs/presentation/figs/: apriori_software_functions.graphml
docs/source/: conf.py  index.rst
efficient_apriori/: __init__.py  apriori.py  itemsets.py  rules.py
efficient_apriori/tests/: adult_data_cleaned.txt  online-retail.txt  test_apriori.py  test_itemsets.py  test_itemsets_with_ids.py  test_on_real_data.py  test_rules.py  test_timing.py  transactions.txt
