[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient_apriori"
dynamic = ["readme","dependencies","version"]
description = " An efficient Python implementation of the Apriori algorithm."
license = {file = "LICENSE"}
authors = [
    {name = "tommyod", email = "tommy.odland@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/tommyod/Efficient-Apriori"
Homepage = "https://github.com/tommyod/Efficient-Apriori"
Documentation = "https://github.com/tommyod/Efficient-Apriori#readme"
Repository = "https://github.com/tommyod/Efficient-Apriori.git"


[tool.setuptools.dynamic]
version = {attr = "efficient_apriori.__version__"}
readme = { file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["efficient_apriori"]
exclude = ["contrib", "docs", "tests"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["templates/*", "*.tex", "*.html"]

[tool.pytest.ini_options]
testpaths = ["efficient_apriori/tests"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "3.7"
filterwarnings = "ignore"
norecursedirs = "docs"
